[css-grid] Clear the override width for computing percent margins https://bugs.webkit.org/show_bug.cgi?id=209461

Reviewed by Manuel Rego Casasnovas.

LayoutTests/imported/w3c:

Import new WPT tests and update existing ones.

* web-platform-tests/css/css-grid/grid-definition/grid-minimum-contribution-with-percentages-expected.txt:
* web-platform-tests/css/css-grid/grid-items/grid-item-dynamic-min-contribution-001-expected.txt: Added.
* web-platform-tests/css/css-grid/grid-items/grid-item-dynamic-min-contribution-001.html: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-001.html:
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-002.html:
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-003-expected.xht: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-003.html: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-004-expected.xht: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-004.html: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-005-expected.xht: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-005.html: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-006-expected.xht: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-006.html: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-007-expected.xht: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-007.html: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-008-expected.xht: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-008.html: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-009-expected.xht: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-009.html: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-010-expected.xht: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-010.html: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-011-expected.xht: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-011.html: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-012-expected.xht: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-012.html: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-013-expected.xht: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-013.html: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-014-expected.xht: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-014.html: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-vertical-lr-001.html:
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-vertical-lr-002.html:
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-vertical-rl-001.html:
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-vertical-rl-002.html:
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-001.html:
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-002.html:
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-003-expected.xht: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-003.html: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-004-expected.xht: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-004.html: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-005-expected.xht: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-005.html: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-006-expected.xht: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-006.html: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-007-expected.xht: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-007.html: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-008-expected.xht: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-008.html: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-009-expected.xht: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-009.html: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-010-expected.xht: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-010.html: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-011-expected.xht: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-011.html: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-012-expected.xht: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-012.html: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-013-expected.xht: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-013.html: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-014-expected.xht: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-014.html: Added.
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-vertical-lr-001.html:
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-vertical-lr-002.html:
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-vertical-rl-001.html:
* web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-vertical-rl-002.html:
* web-platform-tests/css/css-grid/grid-items/w3c-import.log:

Source/WebCore:

When calculating the min-content contribution of a grid item of an auto
sized grid track we must consider the grid item's margin. When the grid
item's area is indefinite, a percent margin is resolved to zero.
However, when performing a relayout, the percent margin may be solved
against the previously computed grid area, since the grid item has
already an OverrideContainingBlockLogicalWidth value.

In order to re-compute the percent margin properly, we need to clear
the previously override value. It's important to be careful of not
clearing the override value set during intrinsic size, since we need
it for the actual layout phase. Hence, we only reset the 'override'
value when we are executing a definite strategy.

Tests: imported/w3c/web-platform-tests/css/css-grid/grid-definition/grid-minimum-contribution-with-percentages.html
       imported/w3c/web-platform-tests/css/css-grid/grid-items/grid-item-dynamic-min-contribution-001.html
       imported/w3c/web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-003.html
       imported/w3c/web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-004.html
       imported/w3c/web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-005.html
       imported/w3c/web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-006.html
       imported/w3c/web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-007.html
       imported/w3c/web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-008.html
       imported/w3c/web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-009.html
       imported/w3c/web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-010.html
       imported/w3c/web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-011.html
       imported/w3c/web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-012.html
       imported/w3c/web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-013.html
       imported/w3c/web-platform-tests/css/css-grid/grid-items/grid-items-percentage-margins-014.html
       imported/w3c/web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-003.html
       imported/w3c/web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-004.html
       imported/w3c/web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-005.html
       imported/w3c/web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-006.html
       imported/w3c/web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-007.html
       imported/w3c/web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-008.html
       imported/w3c/web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-009.html
       imported/w3c/web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-010.html
       imported/w3c/web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-011.html
       imported/w3c/web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-012.html
       imported/w3c/web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-013.html
       imported/w3c/web-platform-tests/css/css-grid/grid-items/grid-items-percentage-paddings-014.html

* rendering/GridTrackSizingAlgorithm.cpp:
(WebCore::hasRelativeMarginOrPaddingForChild):
(WebCore::hasRelativeOrIntrinsicSizeForChild):
(WebCore::shouldClearOverrideContainingBlockContentSizeForChild):
(WebCore::GridTrackSizingAlgorithmStrategy::minSizeForChild const):
(WebCore::GridTrackSizingAlgorithmStrategy::minLogicalSizeForChild const):
(WebCore::DefiniteSizeStrategy::minLogicalSizeForChild const):
(WebCore::DefiniteSizeStrategy::minContentForChild const):
* rendering/GridTrackSizingAlgorithm.h:


Canonical link: https://commits.webkit.org/224931@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@261841 268f45cc-cd09-0410-ab3c-d52691b4dbfc